# archive_ingraph

./: .gitignore  .prettierignore  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
docs_backup/blog/: 2020-01-16-hello-world.md  2020-03-31-introducing-ingraph.md
docs_backup/docs/: .editorconfig
docs_backup/docs/ingraph/: language.md  overview.md  start.md  stdlib.md
scaffold/: .editorconfig  .gitignore  .prettierignore  Makefile  README.md  pyproject.toml  setup.cfg
scaffold/.devcontainer/: devcontainer.json
scaffold/src/helloworld/: example.py
specs/aws/: __main__.py  doc.py  module.py.j2  policies.json  versions.json
src/ingraph/: __main__.py
src/ingraph/aws/: __init__.pyi  alexa_ask.pyi  aws_accessanalyzer.pyi  aws_acmpca.pyi  aws_amazonmq.pyi  aws_amplify.pyi  aws_apigateway.pyi  aws_apigatewayv2.pyi  aws_appconfig.pyi  aws_applicationautoscaling.pyi  aws_appmesh.pyi  aws_appstream.pyi  aws_appsync.pyi  aws_athena.pyi  aws_autoscaling.pyi  aws_autoscalingplans.pyi  aws_backup.pyi  aws_batch.pyi  aws_budgets.pyi  aws_cassandra.pyi  aws_certificatemanager.pyi  aws_chatbot.pyi  aws_cloud9.pyi  aws_cloudformation.pyi  aws_cloudfront.pyi  aws_cloudtrail.pyi  aws_cloudwatch.pyi  aws_codebuild.pyi  aws_codecommit.pyi  aws_codedeploy.pyi  aws_codeguruprofiler.pyi  aws_codepipeline.pyi  aws_codestar.pyi  aws_codestarconnections.pyi  aws_codestarnotifications.pyi  aws_cognito.pyi  aws_config.pyi  aws_datapipeline.pyi  aws_dax.pyi  aws_detective.pyi  (+76 more)
src/ingraph/cli/: __init__.py  (+1 more)
tests/e2e/: test_all.py
(+37 files in other folders)
