[build-system]
build-backend="poetry.masonry.api"
requires=["poetry>=1.0.0"]

[tool.poetry]
name="ingraph-helloworld"
version="0.0.0"
description="A 'Hello, World!' InGraph component."
license="MIT"
authors=[]
readme="README.md"
packages=[{ include="helloworld", from="src" }]

[tool.poetry.dependencies]
python="^3.8"
ingraph ="^0.1.0"

[tool.poetry.dev-dependencies]
autoflake="^1.3.1"
black="^19.10b0"
isort="^4.3.21"
rope="^0.16.0"
twine="^3.1.1"
